--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-application-acme-car-dealership",
+  "name": "waacd",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
